# cytofCore

./: .gitignore  DESCRIPTION  NAMESPACE  README.mediawiki  configure  configure.ac
R/: compensate.R  extract.R  postprocessUtilites.R  read.R  write.R
inst/automator/R/: Subtract100.R
inst/automator/apps/Concatenate.app/Contents/: Info.plist  document.wflow
inst/automator/apps/Extract IMD.app/Contents/: Info.plist  document.wflow
inst/automator/apps/Subtract100.app/Contents/: Info.plist  document.wflow
man/: cytofCore.extract.R.Rd  cytofCore.read.conf.Rd  cytofCore.read.imd.Rd  cytofCore.write.FCS.Rd
src/: Makevars  Makevars.in  extract.cc
src/automator/R/: ExtractIMD.R
src/automator/apps/Concatenate.app/Contents/: Info.plist  document.wflow
src/automator/apps/Extract IMD.app/Contents/: document.wflow
src/automator/apps/Subtract100.app/Contents/: Info.plist  document.wflow
src/automator/apps/Subtract100.app/Contents/MacOS/: Application Stub
